name:                diagrams-drawille
version:             0.1.0.0
synopsis:            Render diagrams using braille unicode characters
description:         TODO: Provide description
license:             GPL-3
license-file:        LICENSE
author:              Konstantin Zudov
maintainer:          konstantin@anche.no
copyright:           Konstantin Zudov, 2014
category:            Graphics

build-type:          Simple

extra-source-files:  README.md
cabal-version:       >=1.10

library
  build-depends:       diagrams-core >= 1.2 && < 1.3
                     , diagrams-lib >= 1.2 && < 1.3
                     , diagrams-rasterific <= 0.1.0.3
                     , containers >= 0.3 && < 0.6
                     , JuicyPixels >= 3.1.3.2 && < 3.2
                     , drawille <= 0.1.0.2

  exposed-modules:     Diagrams.Backend.Drawille
  build-depends:       base >=4.7 && <4.8
  hs-source-dirs:      src/
  default-language:    Haskell2010
  ghc-options:         -Wall

executable diagrams-drawille-examples
  ghc-options:       -Wall
  hs-source-dirs:    examples
  main-is:           Example.hs
  build-depends:     base >=4.5 && < 5
                   , diagrams-core >= 1.2 && < 1.3
                   , diagrams-lib >= 1.2 && < 1.3
                   , diagrams-rasterific
                   , diagrams-drawille
                   , split >= 0.1.2 && < 0.3
                   , containers >= 0.3 && < 0.6
                   , JuicyPixels >= 3.1.3.2 && < 3.2
                   , drawille
